# ML-in-Prod-batch-2

./: .gitignore  Day1.txt  README.md
.dvc/: config
12_Concurrency_In_AI_workloads/: README.md  pyspark_testing.ipynb
13_Adv_AI_methods/Agentic_RAG/: Pipfile  README.md  agentic_RAG_with_ollama.ipynb  agentic_rag_multi_agent2.ipynb  crewai_tools_multiple_agent.ipynb  fuzzyOutput_actualOutput.ipynb  marketing_report.md  tools_test.ipynb  venue_details.json
13_Adv_AI_methods/Agentic_RAG_projs/: Pipfile
13_Adv_AI_methods/MCP/: README.MD
1_Python_Basic_and_git/: MYOWNREADME.md  README.md
1_Python_Basic_and_git/design_pattern/: README.md
2_ProdAndDev_Env_Setup/: README.md  test_lib.ipynb
2_ProdAndDev_Env_Setup/poetry_test/: pyproject.toml  test_nb.ipynb
2_ProdAndDev_Env_Setup/test1_pipenv/: Pipfile
2_ProdAndDev_Env_Setup/test2_pipenv/: Pipfile
3_Image_Processing_Techniques/: basic_img_funcs.ipynb  img_processing_examples.ipynb
3_Image_Processing_Techniques/.codegpt/: head
3_Image_Processing_Techniques/OCR_proj/: ocr_proj.ipynb
5_DeepLearning/tf_best_practices/: KD.md  (+5 more)
7_Data_version_control/: README.md  cat_and_dog_dataset.dvc
8_Experiment_Tracking/: README.md  mlruns.sqlite  predictions.csv  v1_getting_start_mlflow.ipynb  v2_logging_api.ipynb  v3_mlflow_client.ipynb  v4_test.ipynb
9_ML_System_Monitoring/: README.md  data_drift_report.html  drift_sample.ipynb  eventlyai_dashboard_test.ipynb  eventlyai_test.ipynb  evidentlyai_dashboard_test.ipynb  monitoring_basic.ipynb  v0_monitoring_basic.ipynb  v1_monitoring_basic.ipynb  v2_evidently_proj.ipynb
(+110 files in other folders)
